tests/negative/gold/clashing-field2-test.gold
tests/negative/clashing-field2-test.toit:7:3: error: Redefinition of 'foo'
  foo:
  ^~~
tests/negative/clashing-field2-test.toit:6:3: note: First definition of 'foo'
  foo := 1
  ^~~
tests/negative/clashing-field2-test.toit:9:3: error: Redefinition of 'foo'
  foo= x:
  ^~~~
tests/negative/clashing-field2-test.toit:6:3: note: First definition of 'foo'
  foo := 1
  ^~~
Compilation failed
